# cma

./: .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA.md  DECISIONS.md  DESIGN.md  GOVERNANCE.md  README.md  SECURITY.md  STRATEGY.md  bench.sh  cma  test.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  dco-check.yml  publish-mcp.yml  test.yml  tests-mcp.yml
cma-mcp/: CHANGELOG.md  CITATION.cff  NOTICE  README.md  bench.py  cma_jsonl.py  cma_subprocess.py  mcp_compose.py  mcp_log.py  mcp_protocol.py  mcp_resources.py  mcp_schema.py  mcp_server.py  pyproject.toml  setup.py
cma-mcp/docs/: ANTICIPATED_CRITIQUES.md  ARCHITECTURE.md  FAQ.md  MCP_SERVER.md  TROUBLESHOOTING.md  VALIDATION_PROGRAM.md
cma-mcp/tests/: conftest.py  test_mcp_server.py  test_mcp_wire.py  test_payload_determinism.py  test_resources.py  test_subprocess.py
hooks/: claude-code-pre-tool-use.sh  claude-code-session-start.sh  cma-pre
scripts/: canon_audit.sh  canon_audit_known_leaks.txt
