[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cma-mcp"
version = "0.1.0.dev0"
description = "Model Context Protocol server for the cma compound practice loop. Subprocess wrapper around the canonical bash cma binary; methodology-agnostic substrate; three-section payload (analysis + agent_guidance + provenance) on every response."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Lovro Lucic", email = "lovro.lucic@gmail.com"},
]
keywords = [
    "mcp",
    "model-context-protocol",
    "compound-practice",
    "failure-capture",
    "decision-tracking",
    "prevention",
    "lodestone",
    "cma",
    "clarethium",
    "claude-desktop",
    "cursor",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: System :: Logging",
]
# Runtime dependencies are intentionally empty: cma-mcp uses Python
# standard library only. The MCP protocol is implemented manually
# (DECISIONS AD-001), and the bash cma binary is invoked as a
# subprocess (STRATEGY DD-1, DECISIONS AD-004).
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/Clarethium/cma/tree/main/cma-mcp"
Repository = "https://github.com/Clarethium/cma"
Issues = "https://github.com/Clarethium/cma/issues"
Changelog = "https://github.com/Clarethium/cma/blob/main/cma-mcp/CHANGELOG.md"
Security = "https://github.com/Clarethium/cma/blob/main/SECURITY.md"
Strategy = "https://github.com/Clarethium/cma/blob/main/STRATEGY.md"
Decisions = "https://github.com/Clarethium/cma/blob/main/DECISIONS.md"
"MCP Server Reference" = "https://github.com/Clarethium/cma/blob/main/cma-mcp/docs/MCP_SERVER.md"
"cma (the wrapped CLI, same repo)" = "https://github.com/Clarethium/cma"
"Methodology Canon (Lodestone)" = "https://github.com/Clarethium/lodestone"

[project.scripts]
cma-mcp = "mcp_server:cli"

[tool.setuptools]
# Flat-modules layout matching frame-check-mcp's wheel-bundle
# convention. Each *.py at the repo root ships as a top-level import
# on the installed wheel.
py-modules = [
    "mcp_server",
    "mcp_protocol",
    "mcp_schema",
    "mcp_resources",
    "mcp_compose",
    "mcp_log",
    "cma_subprocess",
    "cma_jsonl",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --strict-markers"
markers = [
    "subprocess: tests that invoke the bash cma binary as a real subprocess (skipped if cma not on PATH)",
    "adversarial: boundary, malformed, and abuse-path tests",
]

[tool.coverage.run]
source = [
    "mcp_server",
    "mcp_protocol",
    "mcp_schema",
    "mcp_resources",
    "mcp_compose",
    "mcp_log",
    "cma_subprocess",
    "cma_jsonl",
]
